--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "simple-rest-api",
+  "name": "chatapp-api",
   "version": "1.0.0",
+  "description": "Simple REST API using Express.js",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
